# Computer-Graphics-Sample

./: CMakeLists.txt  README.md  compile-debug.sh  compile-release.sh
.github/workflows/: cmake-multi-platform.yml
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: .gitkeep  header.cmake  shader_fragment.glsl  source.cmake
src/: main.c  main.cpp
